Add: feature find, create, accept, reject, cancel and unfriend friend request in modules friends
