# src/dtos/friends.dto.ts
@@ -1,1 +1,10 @@
-export class CreateFriendDto {}
+import { IsNotEmpty, IsOptional, IsString } from 'class-validator';
+
+export class CreateFriendRequestDto {
+  @IsOptional()
+  public senderId: string;
+
+  @IsString()
+  @IsNotEmpty()
+  public receiverId: string;
+}
